# cargo-panic

./: .azure-pipelines.yml  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  cargo-panic  derivation.nix  shell.nix
depend/: Cargo.toml  README.md
depend/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
hook/: Cargo.toml
hook/src/: lib.rs
