[package]
name = "cargo-panic-hook"
version = "0.1.0"
authors = ["arc"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
color-backtrace = { version = "^0.1.3", optional = true }
pretty_backtrace = { version = "^0.1.1", optional = true }
libc-print = { version = "^0.1.7", optional = true }
ctor = "^0.1.9"

[features]
debug_log = ["libc-print"]
debug_test = ["libc-print"]
